# cpp-engine

./: .gitignore  CMakeLists.txt  README.md
.agent/workflows/: build_and_run.md
lib/include/assimp/: Importer.hpp  config.h  material.h  matrix4x4.inl  mesh.h  postprocess.h  scene.h
lib/include/entt/: entt.hpp
lib/include/glad/: glad.h
lib/include/glm/detail/: setup.hpp
lib/include/old/imgui/: ImGuizmo.cpp  imgui_demo.cpp  imgui_draw.cpp
lib/src/: ImGuizmo.cpp  glad.c
resources/animations/: Take001.ozz  idle.ozz  mixamocom.anim  walking.anim
resources/materials/: mat1.material  mat1iapu.material  mat6TLM0.material  mat7M8cC.material  matRY3ln.material  matVOf3q.material  matczRc4.material  mateN3v6.material  matezdhv.material  matiNEnA.material  matlvhDt.material
resources/models/: Take001.ozz  TwistedTree_1.mtl  cylinder.mtl  mixamo.com.ozz  sphere.mtl
resources/particles/: test.efk
resources/shaders/: anim_mp_frag.glsl  anim_mp_vert.glsl  depth.frag  depth.vert  depth_anim.vert  frag.glsl  gbuffer_model.frag  gbuffer_model.vert  lighting_pass.frag  material_preview_vert.glsl  picking.frag  picking.vert  preview_frag.glsl  preview_vert.glsl  skybox_frag.glsl  skybox_vert.glsl  vert.glsl
resources/ui/: crosshair.rcss  crosshair.rml  demo.rcss  demo.rml  game_hud.rcss
scenes/: scene1.json
scripts/: ball_camera.lua  bullet.lua  crosshair.lua  destroybullets.lua  event_example.lua  floor.lua  game_master.lua  game_ui.lua  init.lua  kill_moving_blocks.lua  platform.lua  player.lua  score_manager.lua  spinner.lua  target.lua  teapot.lua  test.lua  test_events.lua
src/: Camera.cpp  Camera.h  main.cpp
src/animation/: AnimatedMesh.cpp  AnimatedMesh.h  Animation.cpp  Animation.h  AnimationManager.cpp  AnimationManager.h  AnimationShader.cpp  AnimationShader.h  AnimationUtils.cpp  AnimationUtils.h  TerrainRendererComponent.cpp  TerrainRendererComponent.h  icosphere.h  immediate.cpp  immediate.h  mesh.cpp  mesh.h  renderer.h  renderer_impl.cpp  renderer_impl.h  shader.cpp  shader.h  utils.cpp  utils.h
src/assets/: AssetHandle.h  AssetManager.cpp  AssetManager.h  AssetManager.inl  AssetMeta.h  AssetWatcher.h  IAssetLoader.h  ModelLoader.cpp  ModelLoader.h  TextureLoader.cpp  TextureLoader.h
src/assets/impl/: AnimationLoader.cpp  AnimationLoader.h  BinarySceneLoader.cpp  BinarySceneLoader.h  JSONSceneLoader.cpp  JSONSceneLoader.h  MaterialLoader.cpp  MaterialLoader.h  ModelLoader.cpp  ParticleLoader.cpp  ParticleLoader.h  SceneLoader.cpp  SceneLoader.h  SoundLoader.cpp  SoundLoader.h  TerrainLoader.cpp  TerrainLoader.h  TextureLoader.cpp  TextureLoader.h
src/components/: AllComponents.h  Components.cpp  Components.h
src/components/impl/: AnimationComponent.cpp  AnimationComponent.h  AnimationPoseComponent.cpp  AnimationPoseComponent.h  AnimationWorkerComponent.cpp  AnimationWorkerComponent.h  AudioSourceComponent.cpp  AudioSourceComponent.h  EntityMetadataComponent.cpp  EntityMetadataComponent.h  GizmoComponent.cpp  GizmoComponent.h  LuaScriptComponent.cpp  LuaScriptComponent.h  ModelRendererComponent.cpp  ModelRendererComponent.h  NavigationComponents.cpp  NavigationComponents.h  ParticleSystemComponent.cpp  ParticleSystemComponent.h  PlayerControllerComponent.cpp  PlayerControllerComponent.h  RigidBodyComponent.cpp  RigidBodyComponent.h  RmlUIComponent.cpp  RmlUIComponent.h  ShadowCasterComponent.cpp  ShadowCasterComponent.h  SkeletonComponent.cpp  SkeletonComponent.h  SkinnedMeshComponent.cpp  SkinnedMeshComponent.h  TerrainRendererComponent.cpp  TerrainRendererComponent.h  TransformComponent.cpp  TransformComponent.h
src/core/: EditorCommand.h  EditorCommandStack.cpp  EditorCommandStack.h  Engine.cpp  Engine.h  EngineData.cpp  EngineData.h  Entity.cpp  Entity.h  Entity.inl  EntityClipboard.cpp  EntityClipboard.h  EntityHandle.h  Input.cpp  Input.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  Window.cpp  Window.h
src/core/commands/: CloneEntityCommand.cpp  CloneEntityCommand.h  DeleteEntityCommand.cpp  DeleteEntityCommand.h  TransformCommand.cpp  TransformCommand.h
src/core/module/: Module.cpp  Module.h  ModuleManager.cpp  ModuleManager.h  ModuleManager.inl
src/core/module/scriptingonly/: TestModule.cpp  TestModule.h
src/navigation/: NavigationManager.cpp  NavigationManager.h
src/physics/: PhysicsInterfaces.cpp  PhysicsInterfaces.h  PhysicsManager.cpp  PhysicsManager.h  PlayerController.cpp  PlayerController.h  PlayerSettings.h
src/rendering/: Framebuffer.cpp  Framebuffer.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Skybox.cpp  Skybox.h  Texture.cpp  Texture.h
src/rendering/particles/: Particle.cpp  Particle.h  ParticleManager.cpp  ParticleManager.h
src/rendering/shadows/: ShadowMapRenderer.cpp  ShadowMapRenderer.h
src/rendering/ui/: AssetUIRenderer.cpp  AssetUIRenderer.h  ConsoleWindow.h  GameUIManager.cpp  GameUIManager.h  InspectorRenderer.cpp  InspectorUI.cpp  InspectorUI.h  MaterialEditor.cpp  MaterialEditor.h  MaterialPreview.cpp  MaterialPreview.h  ModelPreview.cpp  ModelPreview.h  RmlUiBackend.cpp  RmlUiBackend.h  Themes.h  UIManager.cpp  UIManager.h
src/rendering/ui/windows/: AnimationWindow.cpp  AnimationWindow.h  AssetUIRenderer.cpp  AssetUIRenderer.h  AudioDebugWindow.cpp  AudioDebugWindow.h  ConsoleWindow.cpp  InspectorRenderer.cpp  InspectorRenderer.h  MaterialEditor.cpp  MaterialEditor.h  SceneViewWindow.cpp  SceneViewWindow.h
src/scripting/: EventBus.cpp  EventBus.h  ScriptManager.cpp  ScriptManager.h
src/serialization/: SerializationManager.cpp  SerializationManager.h
src/sound/: SoundManager.cpp  SoundManager.h
src/terrain/: TerrainLoader.cpp  TerrainLoader.h  TerrainManager.cpp  TerrainManager.h  TerrainTile.cpp  TerrainTile.h
src/ui/: UIManager.cpp  UIManager.h
src/utils/: Builder.cpp  Builder.h  ImGuiLogSink.h  Logger.cpp  Logger.h  ModelLoader.cpp  ModelLoader.h  Utils.cpp  Utils.h
